--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>prime</title>
+<title>new_prime</title>
 </head>
 <body>
     <div style="text-align: center; background-color: aquamarine;">
-<h3>hola</h3>    
+<h3>hola git rama tarea</h3>    
 </div>
 </body>
 </html>
